--- a/Project_GameDesign/.gitignore
+++ b/Project_GameDesign/.gitignore
@@ -11,8 +11,7 @@
 /[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
-# They also could contain extremely sensitive data
-/[Mm]emoryCaptures/
+# They also could contain extremely sensitive data*/[Mm]emoryCaptures/
 
 # Recordings can get excessive in size
 /[Rr]ecordings/
