--- a/Project_GameDesign/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Project_GameDesign/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -136,7 +136,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":4.572353363037109,\"y\":2.486611843109131,\"z\":-0.8857393264770508}}"
+                "value": "{\"m_Value\":{\"x\":-2.5,\"y\":3.073197603225708,\"z\":-0.5}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
